src/index.css
@import url("https://fonts.googleapis.com/css2?family=Kanit:wght@100;200;300;400;500&display=swap");
@tailwind base;
@tailwind components;
@tailwind utilities;
:root {
  font-family: Inter, Avenir, Helvetica, Arial, sans-serif;
  font-size: 14px;
  line-height: 24px;
  font-weight: 400;
  box-sizing: border-box;
  color-scheme: light dark;
  color: rgba(255, 255, 255, 0.87);
  background-color: #fffdfa;
  overflow-x: hidden;
  font-synthesis: none;
  text-rendering: optimizeLegibility;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  -webkit-text-size-adjust: 100%;
}
html {
  overflow-y: hidden;
}
body {
  overflow-y: scroll;
}

input:-webkit-autofill,
input:-webkit-autofill:focus {
  transition: background-color 600000s 0s, color 600000s 0s;
}
input[data-autocompleted] {
  background-color: transparent !important;
}
#dropdownMenu::-webkit-scrollbar-thumb {
  background-color: #6c6d7a;
  border-radius: 0.75rem;
  width: 5rem;
}
@layer utilities {
  .blurScreen {
    @apply pointer-events-none blur-sm;
  }

  .scrollbar::-webkit-scrollbar {
    background-color: white;
    width: 0.5rem;
  }
  .scrollbar::-webkit-scrollbar-thumb {
    background-color: #6c6d7a;
    border-radius: 0.75rem;
    width: 5rem;
  }
  @media only screen and (max-width: 425px) {
    .scrollbar::-webkit-scrollbar-thumb {
      display: none;
    }
    .scrollbar::-webkit-scrollbar {
      display: none;
    }
  }
}

